--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ChordActivity"></activity>
+        <activity android:name=".MenuActivity" />
         <activity
             android:name=".TheoryActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".SettingsActivity"
-            android:parentActivityName=".MainActivity"/>
         <activity
-            android:name=".MenuActivity"
+            android:name=".SettingsActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".IntervalActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".QuizActivity" />
         <activity android:name=".MainActivity">
