--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".TonalityActivity"></activity>
         <activity android:name=".ChordActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".TheoryActivity" />
