--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TonalityActivity"></activity>
+        <activity android:name=".TheoryActivity2"></activity>
+        <activity android:name=".TonalityActivity" />
         <activity android:name=".ChordActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".TheoryActivity" />
